[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/andvari.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 42
extra_spacing_top = 8
extra_spacing_bottom = 8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0705882, 0.0588235, 0.0588235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.819608, 0.701961, 0.121569, 1 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 228.0
margin_top = 189.0
margin_right = 795.0
margin_bottom = 410.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 567.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "BLOCK JUMP!"

[node name="LastScore" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 567.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 5 )
text = "Best Score: "

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 567.0
margin_bottom = 199.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "PLAY"

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 567.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 4 )
text = "Ah Goose Software. An Agustin Diaz-Barriga Game"
align = 1

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 3 )
banner_on_top = false
banner_id = "ca-app-pub-9847843636021073/7954777950"
child_directed = true
max_ad_content_rate = "PG"

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
